# digest

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
src/: article.html  digest.py  index.html  item.xml  ollama.py  podcast.xml  style.css
src/templates/: article.html  index.html  macros.html  podcast.xml  summary.md
