[project]
name = "digest"
version = "0.85.1"
description = "Digest is a Python3 script that creates a local version of the weekly Economist magazine that aims to provide an improved reading and listening experience"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "browsercookie>=0.8.1",
    "bs4>=0.0.2",
    "jinja2>=3.1.6",
    "ollama>=0.4.8",
    "readtime>=3.0.0",
    "requests>=2.32.3",
]
